# Symbolon

./: .gitignore  README.md  flake.nix
containers/: default.nix
containers/lib/: eval-image.nix  program-builder.nix  program-builder.test.nix  shared-layers.nix
containers/programs/bash/: default.nix
containers/programs/bc/: default.nix
containers/programs/bison/: default.nix
containers/programs/cjpeg/: default.nix
containers/programs/cjson/: default.nix
containers/scripts/: cov-merge  cov-trajectory  eval-klee  eval-symbolon  klee-plateau-watch  klee-replay-all
containers/tests/: e2e_hello.sh
pass/: CMakeLists.txt
pass/branch-counter/: CMakeLists.txt
pass/branch-counter/include/: BranchCounter.h
pass/branch-counter/src/: BranchCounter.cpp  Main.cpp
pass/branch-counter/tests/: CMakeLists.txt
pass/branch-counter/tests/golden/: empty.json  nested_if.json  simple_if.json  switch.json  switch_no_default.json  system_path.json  system_path_default.json  unreachable_arm.json
pass/branch-counter/tests/inputs/: empty.c  nested_if.c  simple_if.c  switch.c  switch_no_default.c  system_path.c  system_path_default.c  unreachable_arm.c
pass/common/: CMakeLists.txt
pass/common/include/symbolon/: Paths.h  TestCheck.h
pass/common/src/: FixtureRunner.cpp  Paths.cpp
pass/fork-finder/: CMakeLists.txt
pass/fork-finder/include/: ForkFinder.h
pass/fork-finder/src/: Categories.cpp  ForkFinder.cpp  ForkFinderPass.cpp  Internal.h  Main.cpp  Report.cpp
pass/fork-finder/tests/: CMakeLists.txt  update-goldens.sh
pass/fork-finder/tests/golden/: aligned_alloc_const.json  aligned_alloc_var.json  alloca_const.json  alloca_var.json  conditional.json  direct_call.json  divzero_const.json  divzero_no_implicit.json  divzero_var.json  empty.json  free.json  indirect_call.json  indirectbr.json  inline_asm.json  library_in_loop.json  loop_alloc.json  loop_conditional.json  loop_divzero.json  loop_free.json  loop_indirect_call.json  loop_indirectbr.json  loop_overflow.json  loop_realloc.json  loop_switch.json  malloc_const.json  malloc_var.json  memalign_var.json  memcmp_call.json  memop.json  memset_intrinsic.json  nested_loop.json  non_loop_conditional.json  non_loop_conditional_full.json  non_loop_memop.json  overflow_intrinsic.json  realloc.json  strlen_call.json  switch.json  system_path.json  unlocated.json
pass/fork-finder/tests/inputs/: aligned_alloc_const.c  aligned_alloc_var.c  alloca_const.c  alloca_var.c  direct_call.c  divzero_const.c  divzero_no_implicit.c  divzero_var.c  empty.c  free.c  indirect_call.c  indirectbr.c  inline_asm.c  library_in_loop.c  loop_alloc.c  loop_conditional.c  loop_divzero.c  loop_free.c  loop_indirect_call.c  loop_indirectbr.c  loop_overflow.c  loop_realloc.c  loop_switch.c  malloc_const.c  malloc_var.c  memalign_var.c  memcmp_call.c  memop.c  memset_intrinsic.c  nested_loop.c  non_loop_conditional.c  non_loop_conditional_full.c  non_loop_memop.c  overflow_intrinsic.c  realloc.c  strlen_call.c  switch.c  system_path.c  unlocated.c
pass/fork-finder/tests/unit/: test_categories.cpp  test_pretty.cpp  test_report.cpp  test_types.cpp
pass/line-counter/: CMakeLists.txt
pass/line-counter/include/: LineCounter.h
pass/line-counter/src/: LineCounter.cpp  Main.cpp
pass/line-counter/tests/: CMakeLists.txt
pass/line-counter/tests/golden/: empty.json  hello.json  system_path.json  two_files.json  two_files_helper.json
pass/line-counter/tests/inputs/: empty.c  hello.c  system_path.c  two_files.c  two_files_helper.c
pass/line-counter/tests/unit/: test_system_path.cpp
pass/state-killer-finder/: CMakeLists.txt
pass/state-killer-finder/include/: StateKillerFinder.h
pass/state-killer-finder/src/: Categories.cpp  Main.cpp  Report.cpp  StateKillerFinder.cpp  StateKillerFinderPass.cpp
pass/state-killer-finder/tests/: CMakeLists.txt
pass/state-killer-finder/tests/golden/: abort_call.json  arity_match.json  assert_fail.json  atomic_rmw.json  call_arity_mismatch.json  cmpxchg.json  constant_args.json  empty.json  enable_all.json  exit_call.json  free_of_alloca.json  free_of_global.json  indirect_branch.json  indirect_call.json  indirect_call_enabled.json  inline_asm.json  internal_call.json  intrinsic.json  klee_report_error.json  printf_symbolic_int.json  puts_symbolic_buf.json  puts_symbolic_buf_enabled.json  symbolic_alloc_aligned_alloc.json  symbolic_alloc_calloc.json  symbolic_alloc_malloc.json  symbolic_alloc_memalign.json  symbolic_alloc_realloc.json  symbolic_alloc_vla.json  symbolic_vec_extract.json  symbolic_vec_insert.json  trap_intrinsic.json  unimplemented_intrinsic.json  unlocated.json  unreachable_inst.json  vararg_consume.json
pass/state-killer-finder/tests/inputs/: abort_call.c  arity_match.c  assert_fail.c  atomic_rmw.c  call_arity_mismatch.c  cmpxchg.c  constant_args.c  empty.c  enable_all.c  exit_call.c  free_of_alloca.c  free_of_global.c  indirect_branch.c  indirect_call.c  indirect_call_enabled.c  inline_asm.c  internal_call.c  intrinsic.c  klee_report_error.c  printf_symbolic_int.c  puts_symbolic_buf.c  puts_symbolic_buf_enabled.c  symbolic_alloc_aligned_alloc.c  symbolic_alloc_calloc.c  symbolic_alloc_malloc.c  symbolic_alloc_memalign.c  symbolic_alloc_realloc.c  symbolic_alloc_vla.c  symbolic_vec_extract.c  symbolic_vec_insert.c  trap_intrinsic.c  unimplemented_intrinsic.c  unlocated.c  unreachable_inst.c  vararg_consume.c
pass/state-killer-finder/tests/unit/: test_categories.cpp  test_pretty.cpp  test_report.cpp  test_types.cpp
scripts/: code_contests_plus.py  compute-program-stats.py  extract-eval-metrics.py  klee-watch.sh  run-klee-searchers.sh  sat-watch.sh
transformations/: bash.patch  bc.patch  bison.patch  cjpeg.patch  cjson.patch  combine.patch  curl.patch  diffutils.patch  expat.patch  find.patch  flex.patch  flvmeta.patch  gawk.patch  grep.patch  gzip.patch  jasper.patch  jq.patch  libtiff.patch  libxml2.patch  lua.patch  make.patch  nasm.patch  objcopy.patch  openssl.patch  patch.patch  readelf.patch  sed.patch  sqlite.patch  strip-new.patch  tic.patch  transicc.patch  vim.patch
(+41 files in other folders)
